syntax = "proto3";

package ops;

// Operations service for telecom tools
service OperationsService {
  // Update phone number configuration (trunk or app)
  rpc UpdateNumberConfig(UpdateNumberConfigRequest) returns (UpdateNumberConfigResponse);
  
  // Move phone number between Twilio accounts
  rpc UpdateNumberAccount(UpdateNumberAccountRequest) returns (UpdateNumberAccountResponse);
  
  // Check sync for devices, locations, or practices
  rpc CheckSync(CheckSyncRequest) returns (CheckSyncResponse);
  
  // Update voicemail count for bifrost and twilio
  rpc UpdateVoicemailCount(UpdateVoicemailCountRequest) returns (UpdateVoicemailCountResponse);
  
  // Get numbers not associated with a specific trunk in Bifrost
  rpc GetNumbersNotInBifrost(GetNumbersNotInBifrostRequest) returns (GetNumbersNotInBifrostResponse);
  
  // Get numbers not in number cache for Bifrost practices
  rpc GetNumbersNotInNumberCache(GetNumbersNotInNumberCacheRequest) returns (GetNumbersNotInNumberCacheResponse);
  
  // Run migration script for practices
  rpc RunMigration(RunMigrationRequest) returns (RunMigrationResponse);
  
  // Push JSON payload to RabbitMQ queue
  rpc PushToRabbitMQQueue(PushToRabbitMQQueueRequest) returns (PushToRabbitMQResponse);
  
  // Broadcast JSON payload to RabbitMQ exchange
  rpc BroadcastToRabbitMQExchange(BroadcastToRabbitMQExchangeRequest) returns (PushToRabbitMQResponse);
  
  // Generate signed URL for S3 recording URL
  rpc GenerateSignedURL(GenerateSignedURLRequest) returns (GenerateSignedURLResponse);
  
  // List all practices
  rpc ListPractices(ListPracticesRequest) returns (ListPracticesResponse);
  
  // Get call details by callId and practiceId
  rpc GetCallDetails(GetCallDetailsRequest) returns (GetCallDetailsResponse);

  rpc GetCompleteCallDetails(GetCompleteCallDetailsRequest) returns (GetCompleteCallDetailsResponse);
}

// Update Number Config Messages
message UpdateNumberConfigRequest {
  string practice_id = 1;  // Required: Practice ID
  string phone_number = 2;  // Optional: Specific phone number to process
  string trunk_sid = 3;  // Optional: SID of the trunk (mutually exclusive with app_sid)
  string app_sid = 4;  // Optional: SID of the TwiML app (mutually exclusive with trunk_sid)
}

message UpdateNumberConfigResponse {
  bool success = 1;
  string message = 2;
  repeated PhoneNumberResult results = 3;
}

message PhoneNumberResult {
  string phone_number = 1;
  bool success = 2;
  string message = 3;
}

// Update Number Account Messages
message UpdateNumberAccountRequest {
  string practice_id = 1;  // Optional: Practice ID
  string phone_number = 2;  // Optional: Specific phone number (required if not using file)
  string from_account = 3;  // Required: Source account SID
  string from_auth_token = 4;  // Required: Source account Auth Token
  string to_account = 5;  // Required: Destination account SID
  string address_sid = 6;  // Optional: Address SID for regulatory compliance
  string bundle_sid = 7;  // Optional: Bundle SID for regulatory compliance
  bool use_file = 8;  // Optional: Use file input instead of practice_id/number
}

message UpdateNumberAccountResponse {
  bool success = 1;
  string message = 2;
  repeated NumberTransferResult results = 3;
}

message NumberTransferResult {
  string phone_number = 1;
  bool success = 2;
  string message = 3;
}

// Check Sync Messages
message CheckSyncRequest {
  oneof check_type {
    CheckSyncDevice device = 1;
    CheckSyncLocation location = 2;
    CheckSyncPractice practice = 3;
    CheckSyncAllBifrost all_bifrost = 4;
  }
}

message CheckSyncDevice {
  string device_make = 1;  // "Yealink" or "Polycom"
  string sip_account = 2;  // SIP account of the device
}

message CheckSyncLocation {
  string location_id = 1;
}

message CheckSyncPractice {
  string practice_id = 1;
}

message CheckSyncAllBifrost {
  bool confirm = 1;  // Confirmation to check all devices in Bifrost PROD
}

message CheckSyncResponse {
  bool success = 1;
  string message = 2;
  repeated SyncResult results = 3;
}

message SyncResult {
  string identifier = 1;  // Device SIP, Location ID, or Practice ID
  bool in_sync = 2;
  string details = 3;
}

// Update Voicemail Count Messages
message UpdateVoicemailCountRequest {
  string practice_id = 1;  // Optional: Specific practice ID, empty for all practices
  string architecture = 2;  // Optional: "BIFROST" or "TWILIO", empty to prompt
}

message UpdateVoicemailCountResponse {
  bool success = 1;
  string message = 2;
  repeated VoicemailUpdateResult results = 3;
}

message VoicemailUpdateResult {
  string practice_id = 1;
  bool success = 2;
  string message = 3;
  int32 users_updated = 4;
  int32 extensions_updated = 5;
}

// Get Numbers Not In Bifrost Messages
message GetNumbersNotInBifrostRequest {
  string trunk_sid = 1;  // Required: SID of the trunk
}

message GetNumbersNotInBifrostResponse {
  bool success = 1;
  string message = 2;
  map<string, PhoneNumberList> practice_numbers = 3;  // Map of practice_id -> list of phone numbers
}

message PhoneNumberList {
  repeated string phone_numbers = 1;
}

// Get Numbers Not In Number Cache Messages
message GetNumbersNotInNumberCacheRequest {
  // No parameters needed - checks all Bifrost practices
}

message GetNumbersNotInNumberCacheResponse {
  bool success = 1;
  string message = 2;
  map<string, PhoneNumberList> practice_numbers = 3;  // Map of practice_id -> list of phone numbers
}

// RabbitMQ Messages
message PushToRabbitMQQueueRequest {
  string queue_name = 1;  // Required: Name of the RabbitMQ queue
  string payload_json = 2;  // Required: JSON payload as string
}

message BroadcastToRabbitMQExchangeRequest {
  string exchange_name = 1;  // Required: Name of the RabbitMQ exchange
  string payload_json = 2;  // Required: JSON payload as string
}

message PushToRabbitMQResponse {
  bool success = 1;
  string message = 2;
  string queue_or_exchange = 3;  // Name of the queue or exchange used
}

// Migration Messages (placeholder for future implementation)
message RunMigrationRequest {
  string migration_type = 1;
  string practice_id = 2;
}

message RunMigrationResponse {
  bool success = 1;
  string message = 2;
}

// Generate Signed URL Messages
message GenerateSignedURLRequest {
  string url = 1;  // Required: S3 URL to generate signed URL for
}

message GenerateSignedURLResponse {
  bool success = 1;
  string message = 2;
  string signed_url = 3;  // The generated signed URL (valid for 3 hours)
  int64 expires_in = 4;  // Expiry time in seconds (10800 for 3 hours)
}

// List Practices Messages
message ListPracticesRequest {
  // No parameters needed - returns all active practices
}

message Practice {
  string practice_id = 1;
  string practice_name = 2;
}

message ListPracticesResponse {
  bool success = 1;
  string message = 2;
  repeated Practice practices = 3;
}

// Get Call Details Messages
message GetCallDetailsRequest {
  string practice_id = 1;  // Required: Practice ID
  string call_id = 2;  // Required: Call ID to search for
}

message GetCallDetailsResponse {
  bool success = 1;
  string message = 2;
  CallDetails call_details = 3;
}

message CallDetails {
  string call_id = 1;
  string practice_id = 2;
  string call_time = 3;  // ISO 8601 timestamp
  int32 conversation_duration = 4;  // Duration in seconds
  string caller_number = 5;
  string callee_number = 6;
  string call_direction = 7;  // "inbound" or "outbound"
  bool voicemail = 8;
  string recording_url = 9;
  string call_end_time = 10;
  CallFlow call_flow = 11;
}

message CallFlow {
  string call_id = 1;
  string phone_number = 2;
  repeated CallFlowEvent events = 3;
}

message CallFlowEvent {
  string action = 1;  // e.g., "INCOMING_CALL", "IVR", "QUEUE", "ANSWERED", etc.
  string timestamp = 2;  // ISO 8601
  map<string, string> arguments = 3;  // Event-specific data
  bool is_campaign = 4;  // For incoming calls
}

// Get Complete Call Details Messages
message GetCompleteCallDetailsRequest {
  string call_id = 1;  // Required: Call ID to search for
  string practice_id = 2;  // Optional: Practice ID for filtering
}

message GetCompleteCallDetailsResponse {
  bool success = 1;
  string message = 2;
  CompleteCallDetails call_details = 3;
}

message CompleteCallDetails {
  string call_id = 1;
  string practice_id = 2;
  string call_history_json = 3;  // Complete callhistory document as JSON string
  string call_lifecycle_json = 4;  // Complete calllifecycles document as JSON string
  bool has_call_history = 5;  // Whether callhistory document exists
  bool has_call_lifecycle = 6;  // Whether calllifecycles document exists
}
